k8s/traefik/ingress-route/traefik.yaml
### -> https://github.com/traefik/traefik/issues/7126
# apiVersion: traefik.io/v1alpha1
# kind: TLSOption
# metadata:
#   name: default
#   namespace: default
# spec:
#   minVersion: VersionTLS12
#   cipherSuites:
#     - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384   # TLS 1.2
#     - TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305    # TLS 1.2
#     - TLS_AES_256_GCM_SHA384                  # TLS 1.3
#     - TLS_CHACHA20_POLY1305_SHA256            # TLS 1.3
#   curvePreferences:
#     - CurveP521
#     - CurveP384
#   sniStrict: true
# ---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v3.1
          args:
            - --api.insecure
            - --accesslog
            # - --log.level=DEBUG
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:4443
            # k8s
            - --providers.kubernetescrd
            # IngressRoute can reference resources in namespaces other than theirs
            - --providers.kubernetescrd.allowCrossNamespace=true
            # ingressRoutes can reference ExternalName services
            - --providers.kubernetescrd.allowexternalnameservices=true
            # TLS challenge for Lets encrypt
            # - --certificatesresolvers.gnoresolver.acme.tlschallenge
            - --certificatesresolvers.gnoresolver.acme.httpchallenge.entrypoint=web
            - --certificatesresolvers.gnoresolver.acme.email=gno@tendermint.com
            - --certificatesresolvers.gnoresolver.acme.storage=acme.json
            # Please note that this is the staging Let's Encrypt server.
            # Once you get things working, you should remove that whole line altogether.
            - --certificatesresolvers.gnoresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
            # Letsencrypt dns challenge resolver
            - --certificatesresolvers.dns-gnoresolver.acme.dnschallenge
            - --certificatesresolvers.dns-gnoresolver.acme.dnschallenge.provider=cloudflare
            - --certificatesresolvers.dns-gnoresolver.acme.dnschallenge.delaybeforecheck=10
            # - --certificatesresolvers.dns-gnoresolver.acme.dnschallenge.resolvers=1.1.1.1:53,1.0.0.1:53
            - --certificatesresolvers.dns-gnoresolver.acme.email=gno@tendermint.com
            - --certificatesresolvers.dns-gnoresolver.acme.storage=acme.json
            - --certificatesresolvers.dns-gnoresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: admin
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  selector:
    app: traefik
  ports:
  - name: admin
    protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 31808
  - name: web
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
  - name: webtls
    protocol: TCP
    port: 443
    targetPort: 443
    nodePort: 30443
  type: NodePort
